; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/vfp/extr_vfpmodule.c_vfp_emulate_instruction.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/vfp/extr_vfpmodule.c_vfp_emulate_instruction.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pt_regs = type { i32 }

@VFP_EXCEPTION_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [38 x i8] c"VFP: emulate: INST=0x%08x SCR=0x%08x\0A\00", align 1
@VFP_NAN_FLAG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, %struct.pt_regs*)* @vfp_emulate_instruction to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vfp_emulate_instruction(i32 %0, i32 %1, %struct.pt_regs* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.pt_regs*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store %struct.pt_regs* %2, %struct.pt_regs** %6, align 8
  %8 = load i32, i32* @VFP_EXCEPTION_ERROR, align 4
  store i32 %8, i32* %7, align 4
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @pr_debug(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0), i32 %9, i32 %10)
  %12 = load i32, i32* %4, align 4
  %13 = call i64 @INST_CPRTDO(i32 %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %34

15:                                               ; preds = %3
  %16 = load i32, i32* %4, align 4
  %17 = call i32 @INST_CPRT(i32 %16)
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %32, label %19

19:                                               ; preds = %15
  %20 = load i32, i32* %4, align 4
  %21 = call i64 @vfp_single(i32 %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %27

23:                                               ; preds = %19
  %24 = load i32, i32* %4, align 4
  %25 = load i32, i32* %5, align 4
  %26 = call i32 @vfp_single_cpdo(i32 %24, i32 %25)
  store i32 %26, i32* %7, align 4
  br label %31

27:                                               ; preds = %19
  %28 = load i32, i32* %4, align 4
  %29 = load i32, i32* %5, align 4
  %30 = call i32 @vfp_double_cpdo(i32 %28, i32 %29)
  store i32 %30, i32* %7, align 4
  br label %31

31:                                               ; preds = %27, %23
  br label %33

32:                                               ; preds = %15
  br label %33

33:                                               ; preds = %32, %31
  br label %35

34:                                               ; preds = %3
  br label %35

35:                                               ; preds = %34, %33
  %36 = load i32, i32* %7, align 4
  %37 = load i32, i32* @VFP_NAN_FLAG, align 4
  %38 = xor i32 %37, -1
  %39 = and i32 %36, %38
  ret i32 %39
}

declare dso_local i32 @pr_debug(i8*, i32, i32) #1

declare dso_local i64 @INST_CPRTDO(i32) #1

declare dso_local i32 @INST_CPRT(i32) #1

declare dso_local i64 @vfp_single(i32) #1

declare dso_local i32 @vfp_single_cpdo(i32, i32) #1

declare dso_local i32 @vfp_double_cpdo(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
